# sd-webui-enable-checker

./: .eslintrc.json  .gitignore  .markdownlint.json  .yamllint.yml  Makefile  README.md  Taskfile.yml  _typos.toml  biome.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  codeql-analysis.yml  stale-issues.yml  typos.yml
javascript/: main.js  switch-bg.js
scripts/: enable_checker.py
