[tool.poetry]
name = "sd-webui-enable-checker"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<3.12"


[tool.poetry.dev-dependencies]
coverage = ">=5.3"
flake8 = ">=3.8.4"
isort = ">=5.9.3"
pydocstyle = ">=5.1.1"
black = ">=21.10b0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportUnusedVariable = "warning"
exclude = [".venv", "**/node_modules", "**/__pycache__",]
reportPrivateImportUsage = "information"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
