[project]
name = "sd-webui-enable-checker"
version = "2.6.3"
description = ""
readme = "README.md"
authors = [{ author = "Yuta Hayashibe", email = "yuta@hayashibe.jp" }]
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
dependencies = []

[tool.uv]
dev-dependencies = ["ruff>=0.6.7", "yamllint>=1.35.1"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportUnusedVariable = "warning"
exclude = [".venv", "**/node_modules", "**/__pycache__"]
reportPrivateImportUsage = "information"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
